2006-03-15  Beth Dakin  <bdakin@apple.com>

        Reviewed by Eric

        Fix for some leaks and intermittent broken pipes in the layout 
        tests after check-in for http://bugzilla.opendarwin.org/
        show_bug.cgi?id=4171.  

        * platform/StringImpl.cpp:
        (WebCore::StringImpl::capitalize): Call deleteQCharVector() for 
        stringWithPrevious and make sure we don't walk off the end of 
        stringWithPrevious when copying to capitalizedString.

2006-03-15  Adele Peterson  <adele@apple.com>

       Reviewed by Maciej.

       Followup fix for previous checkin.
       http://bugzilla.opendarwin.org/show_bug.cgi?id=7114
       <rdar://problem/3695120> dragging to scroll doesn't work with overflow:auto/scroll/overlay areas 

       Many of the bugs related to the Radar bug have to do with autoscrolling in the RSS View.  
       This fix walks the layer tree to find the first scrollable layer, so that autoscrolling will 
       also work with nested layers, like those in the RSS View.

       * bridge/mac/MacFrame.mm: (WebCore::MacFrame::khtmlMouseMoveEvent):

2006-03-15  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        - Fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=7114
        Dragging to scroll doesn't work for overflow areas

        No test case.  There doesn't appear to be a way to trigger the autoscroll with the EventSender.

        * bridge/mac/MacFrame.mm:
        (WebCore::MacFrame::khtmlMouseMoveEvent):  If we have a layer that can scroll, let the layer handle its autoscroll.  
         Otherwise, call over the bridge to let AppKit scroll the view.
        (WebCore::MacFrame::khtmlMouseReleaseEvent): Stops the autoscroll timer.
        * page/Frame.cpp:
        (WebCore::Frame::khtmlMouseReleaseEvent): Stops the autoscroll timer.
        (WebCore::Frame::handleAutoscroll): Added. Saves the layer, and starts the timer.